# QTodoCalen

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.py
cmake/: CustomOptions.cmake  Toolchain.cmake
resources/: qtcresources.qrc
src/: CMakeLists.txt  main.cpp
src/App/: CMakeLists.txt  QTCApplication.cpp  QTCApplication.h  QTCMainWindow.cpp  QTCMainWindow.h
src/Themes/: CMakeLists.txt  ThemeManager.cpp  ThemeManager.h  ThemesConfigParse.cpp  ThemesConfigParse.h
src/UI/: CMakeLists.txt  MainWindow.qml
src/UI/FramelessWindow/: QTCFramelessWindow.qml  QTCHandleArea.qml  QTCResizeHandles.qml  QTCTitleBar.qml  RoundedWindowHelper.cpp  RoundedWindowHelper.h
src/UI/ImageProcesses/: QTCRoundedMaskedImage.qml
src/Utilities/: CMakeLists.txt  QTCLoggingCategory.cpp  QTCLoggingCategory.h
src/constants/: CMakeLists.txt  QTCConstants.h
themes/: dark.json  themes.qrc
tools/: build.bat
